# TP4_LOG2400

./: .gitignore  CMakeLists.txt  Makefile  README.txt
include/: affichage.h  affichage_id.h  affichage_template.h  affichage_texture.h  cmd_deplacer.h  cmd_fusionner.h  cmd_supprimer.h  commande.h  iElement.h  invoker.h  ligne.h  manager.h  mode_affichage.h  nuage.h  point.h  surface.h  surface_c1.h  surface_c2.h  surface_strategy.h  texture.h  texture_decorator.h  texture_decorator_concret.h
src/: MiniDesign.cpp  affichage.cpp  cmd_deplacer.cpp  cmd_fusionner.cpp  cmd_supprimer.cpp  invoker.cpp  manager.cpp  nuage.cpp  point.cpp  surface.cpp  surface_c1.cpp  surface_c2.cpp  texture.cpp
